--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,21 +6,39 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-  <display-name>Archetype Created Web Application</display-name>
+<!--  <display-name>Archetype Created Web Application</display-name>-->
+<!--  <servlet>-->
+<!--    <servlet-name>RegistServlet</servlet-name>-->
+<!--    <servlet-class>com.louis.web.RegistServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>RegistServlet</servlet-name>-->
+<!--    <url-pattern>/regist</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet>-->
+<!--    <servlet-name>LoginServlet</servlet-name>-->
+<!--    <servlet-class>com.louis.web.LoginServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>LoginServlet</servlet-name>-->
+<!--    <url-pattern>/login</url-pattern>-->
+<!--  </servlet-mapping>-->
   <servlet>
-    <servlet-name>RegistServlet</servlet-name>
-    <servlet-class>com.louis.web.RegistServlet</servlet-class>
+    <servlet-name>UserServlet</servlet-name>
+    <servlet-class>com.louis.web.UserServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>RegistServlet</servlet-name>
-    <url-pattern>/regist</url-pattern>
+    <servlet-name>UserServlet</servlet-name>
+    <url-pattern>/user</url-pattern>
   </servlet-mapping>
+
+
   <servlet>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>com.louis.web.LoginServlet</servlet-class>
+    <servlet-name>BaseServlet</servlet-name>
+    <servlet-class>com.louis.web.BaseServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/login</url-pattern>
+    <servlet-name>BaseServlet</servlet-name>
+    <url-pattern>/base</url-pattern>
   </servlet-mapping>
 </web-app>
