--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,6 +1,6 @@
 username=root
 password=123456
 url=jdbc:mysql://localhost:3306/book?useUnicode=true&characterEncoding=utf8&useSSL=true
-driver=com.mysql.jdbc.Driver
+driver=com.mysql.cj.jdbc.Driver
 initialSize=5
 maxActive=10
