--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -66,8 +66,19 @@
     <servlet-name>KaptchaServlet</servlet-name>
     <servlet-class>com.google.code.kaptcha.servlet.KaptchaServlet</servlet-class>
   </servlet>
-  <servlet-mapping>
+    <servlet-mapping>
     <servlet-name>KaptchaServlet</servlet-name>
     <url-pattern>/kaptcha.jpg</url-pattern>
+  </servlet-mapping>
+
+
+  <!--购物车-->
+  <servlet>
+    <servlet-name>CartServlet</servlet-name>
+    <servlet-class>com.louis.web.CartServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CartServlet</servlet-name>
+    <url-pattern>/cart</url-pattern>
   </servlet-mapping>
 </web-app>
