--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -91,4 +91,16 @@
     <servlet-name>OrderServlet</servlet-name>
     <url-pattern>/order</url-pattern>
   </servlet-mapping>
+
+  <!--过滤器-->
+  <filter>
+    <filter-name>ManagerFilter</filter-name>
+    <filter-class>com.louis.filter.ManagerFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>ManagerFilter</filter-name>
+    <url-pattern>/pages/manager/*</url-pattern>
+    <url-pattern>/manager/book</url-pattern>
+  </filter-mapping>
+
 </web-app>
