--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -103,4 +103,14 @@
     <url-pattern>/manager/book</url-pattern>
   </filter-mapping>
 
+  <filter>
+    <filter-name>TransactionFilter</filter-name>
+    <filter-class>com.louis.filter.TransactionFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>TransactionFilter</filter-name>
+    <!-- /* 表示当前工程下所有请求 -->
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
 </web-app>
