--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.4</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/com.google.code/kaptcha -->
 
   </dependencies>
